# llm-bootstrap

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PRD.md  RALPH_PLAN.md  README.ko.md  README.md  ROLE-MAP.md  SECURITY.md  SKILLS.md  TRD.md  Taskfile.yml  bootstrap.toml  install-release.sh  install.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.ko.md  README.md  business-ops-blueprint.ko.md  business-ops-blueprint.md  capability-os-strategy.ko.md  codex-first-blueprint.ko.md  codex-first-blueprint.md  dev-company-operating-model.ko.md  dev-company-operating-model.md  direction-review.ko.md  direction-review.md  external-tool-landscape.ko.md  external-tool-landscape.md  legacy-migration.ko.md  legacy-migration.md  monorepo-boundary.ko.md  monorepo-boundary.md  official-best-practices.ko.md  official-best-practices.md  oh-my-comparison-report.ko.md  oh-my-comparison-report.md  operating-record-model.ko.md  orchestration-gstack-contract.ko.md  orchestration-gstack-contract.md  product-goal.ko.md  product-goal.md  provider-config-ownership.ko.md  provider-config-ownership.md  provider-native-kit-strategy.ko.md  provider-native-kit-strategy.md  provider-surface-strategy.ko.md  provider-surface-strategy.md  ralph-loop-program-plan.ko.md  ralph-loop-program-plan.md  recent-signal-scan.ko.md  recent-signal-scan.md  reference-adoption-analysis.ko.md  reference-adoption-analysis.md  reference-coverage.ko.md  reference-coverage.md  (+10 more)
src/: cli.rs  fs_ops.rs  json_ops.rs  layout.rs  main.rs  manifest.rs  repo_assets.rs  (+2 more)
(+473 files in other folders)
