[package]
name = "stackpilot"
version = "0.3.4"
edition = "2024"
default-run = "stack-pilot"

[[bin]]
name = "stack-pilot"
path = "src/main.rs"

[[bin]]
name = "sp"
path = "src/bin/sp.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
dirs = "6.0"
indexmap = "2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
